# curvature_constraints

./: compare_cps.py  compare_curvature_bounding_methods.py  compare_objective_functions.py  compare_path_generator.py  compare_vel_accel_cross_cps.py  distance_to_convex_hull copy.py  distance_to_convex_hull.py  fifth_order_curvature_eval.py  mdm_algorithm.py  plot_time_analysis.py  plot_time_analysis_new.py  test_2nd_order_path_generator.py  test_3d_path_gen_python.py  test_c++_code.py  test_control_point_method.py  test_cubic_equation_solver.py  test_curvature_bounding_methods.py  test_geometric_method.py  test_lin_path_generator.py  test_max_numerator_functions.py  test_max_over_min_cube_root_method.py  test_mdm.py  test_mdm_algorithm.py  test_open_path_generator.py  test_open_path_generator_new.py  test_path_follower.py  test_path_generator.py  test_path_generator_obst.py  test_path_generator_sfc.py  test_path_generator_sfc_2D.py  test_path_generator_sfc_3D.py  test_root_finder.py  test_sfc_representation.py  test_spline_order_converter.py  test_time_random_configurations.py  test_vel_mag_derivative.py  testing_min_velocity.py
CubicSolver/: CMakeLists.txt  CubicEquationSolver.cpp  UnitTestCubicEquationSolver.cpp  cython_binding.pyx
CurvatureEvaluation/: CMakeLists.txt  oldCMakeLists.txt  olderCmakeList.txt
CurvatureEvaluation/src/: BsplineToBezier.cpp  BsplineToBezier.hpp  CMakeLists.txt  CubicEquationSolver.cpp  CubicEquationSolver.hpp  CurvatureBounds3rdOrder.cpp  CurvatureBounds3rdOrder.hpp  FifthOrderCurvatureEvaluator.cpp  FifthOrderCurvatureEvaluator.hpp  MDMAlgorithm.cpp  MDMAlgorithm.hpp  MDMAlgorithmClass.cpp  SecondOrderCurvatureEvaluator.cpp  SecondOrderCurvatureEvaluator.hpp  ThirdOrderCurvatureEvaluator.cpp  ThirdOrderCurvatureEvaluator.hpp
CurvatureEvaluation/tests/: CMakeLists.txt  UnitTestBsplineToBezier.cpp  UnitTestCurvatureBounds3rdOrder.cpp  UnitTestFifthOrderCurvatureEvaluator.cpp  UnitTestMDMAlgorithm.cpp  UnitTestMDMAlgorithmClass.cpp  UnitTestSecondOrderCurvatureEvaluator.cpp  UnitTestThirdOrderCurvatureEvaluator.cpp
PathObjectivesAndConstraints/: CMakeLists.txt
PathObjectivesAndConstraints/python_wrappers/: curvature_constraints.py  objective_functions.py  obstacle_constraints.py  waypoint_constraints.py  waypoint_velocity_constraints.py
PathObjectivesAndConstraints/src/: BsplineToBezier.cpp  BsplineToBezier.hpp  BsplineToMinvo.cpp  BsplineToMinvo.hpp  CBindingHelper.cpp  CBindingHelper.hpp  CMakeLists.txt  ConvexHullCollisionChecker.cpp  ConvexHullCollisionChecker.hpp  CubicEquationSolver.cpp  CubicEquationSolver.hpp  CurvatureConstraints.cpp  CurvatureConstraints.hpp  DerivativeEvaluator.cpp  DerivativeEvaluator.hpp  MDMAlgorithmClass.cpp  MDMAlgorithmClass.hpp  ObjectiveFunctions.cpp  ObjectiveFunctions.hpp  ObstacelConstraints.cpp  ObstacleConstraints.cpp  ObstacleConstraints.hpp  PathDataEvaluator.hpp  RectPrismCollisionChecker.cpp  RectPrismCollisionChecker.hpp  ThirdOrderCurvatureBounds.cpp  ThirdOrderCurvatureBounds.hpp  ThirdOrderCurvatureEvaluator.cpp  ThirdOrderCurvatureEvaluator.hpp  WaypointConstraints.cpp  WaypointConstraints.hpp
PathObjectivesAndConstraints/tests/: CMakeLists.txt  UnitTestBsplineToBezier.cpp  UnitTestBsplineToMinvo.cpp  UnitTestConvexHullCollisionChecker.cpp  UnitTestCubicEquationSolver.cpp  UnitTestCurvatureConstraints.cpp  UnitTestDerivativeEvaluator.cpp  UnitTestMDMAlgorithmClass.cpp  UnitTestObjectiveFunctions.cpp  UnitTestObstacleConstraints.cpp  UnitTestRectPrismCollisionChecker.cpp  UnitTestThirdOrderCurvatureBounds.cpp  UnitTestThirdOrderCurvatureEvaluator.cpp  UnitTestWaypointConstraints.cpp
code_testing/: convex_hull.py  mdm_algorithm.py  test_control_point_angles.py  test_cube_root_solver.py  test_curvature_bounding_equations.py  test_mdm.py  testing_min_velocity.py
documentation/: main.tex  references.bib
mavsim_python/: README.txt
mavsim_python/control/: autopilot.py
mavsim_python/launch_files/: mavsim_chap11.py  mavsim_chap6.py
mavsim_python/message_types/: msg_autopilot.py  msg_delta.py  msg_state.py
mavsim_python/models/: compute_models.py  mav_dynamics_control.py  model_coef.py  trim.py  wind_simulation.py
mavsim_python/parameters/: control_parameters.py
mavsim_python/planning/: dubins_parameters.py  matrix_evaluation.py  path_follower.py  path_manager.py  rrt_dubins.py  rrt_straight_line.py  spline_path_follower.py  (+1 more)
max_curvature_evaluators/: angle_constrained_max_finder.py  aproximate_circle_three_points.py  control_point_max_finder.py  control_point_method.py  cross_term_method.py  cube_root_solver.py  discrete_evaluations.py  discrete_evaluations_slow.py  geometric_max_finder.py  helper.py  max_at_min_velocity_finder.py  max_numerator_over_min_denominator.py  mdm_algorithm_adapted.py  min_vel_max_cross_term.py  n_points_max_curvature.py  root_finder.py  sqp_max_finder.py
path_following/: spline_path_follower.py
path_generation/: distance_to_convex_hull.py  matrix_evaluation.py  path_generator copy.py  path_generator.py  path_generator_2nd_order.py  path_generator_clamped.py  path_generator_compare.py  path_generator_compare_objective.py  path_generator_lin.py  path_generator_new.py  path_generator_obst.py  path_generator_open.py  path_generator_python.py  piecewise_bspline_path_generator.py  safe_flight_corridor.py  spline_order_converter.py  trajectory_generator_open.py
tests/: test_clamped_path_generator.py  test_curvature_at_min.py  test_curvature_bounding_methods.py  test_max_over_min_cube_root_method.py  test_open_path_generator.py
(+12 files in other folders)
